# blotos

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  dbg_print.rs  framebuffer_adapter.rs  gdt.rs  graphie.rs  interrupts.rs  keyboard.rs  lazy_static.rs  main.rs  memory.rs  println.rs  spin_lock.rs  terminal.rs  window.rs  writer.rs
kernel/src/utils/: array.rs  downcaster.rs  lazy_static.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
